<resources>
    <string name="app_name">Android-Season5</string>
    <string name="sampleText">Sadra.at</string>
    <string name="icon">icon</string>
    <string name="E01AndroidCustomSpinner">Custom Spinner</string>
    <string name="e01Question">which OS would you like?</string>
    <string name="android">Android</string>
    <string name="ios">IOS</string>
    <string name="ubuntu">Ubuntu</string>
    <string name="chromium">Chromium</string>
    <string name="windows">Windows</string>
    <string name="mac">Mac OS X</string>
    <string name="e01Result">You choose %s!</string>
    <string-array name="osNames">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="E02AndroidCustomListView">Custom List View</string>
    <string name="fRace3">Race 3</string>
    <string name="fRace3Des">Concerning illustration we view in the last scene in the trailer, Salman truly blows off two autos approaching him for missiles. New pictures of the star-studded cast of bollywood blockbuster \'Race 3\' for area over Abu Dhabi have been discharged – simply hours following fans went wild for those initial official trailer to those movement film. Race 3’, which is guided by Remo D’Souza Also stars, “around others, Salman khan and Jacqueline Fernandes, shot toward nine areas in the emirate over 23 days to Walk What’s more april.</string>
    <string name="fBhaveshJoshiSuperhero">Bhavesh Joshi Superhero</string>
    <string name="fBhaveshJoshiSuperhero_des">Those vigilante drama, which likewise denote Harshvardhan Kapoor’s second outing, features him Likewise a cover of pregnancy lobbyist. Those action-packed thriller, exhibited by eros International, apparition movies What’s more dependence Entertainment, revolves around an assembly of friends, who set out on the way about exemplary nature.</string>
    <string name="fAdrift">Adrift</string>
    <string name="fAdriftDes">A genuine story of survival, as a youthful couple’s possibility experience drives them initially to love, and after that on the enterprise of a lifetime as they confront a standout amongst the most cataclysmic tropical storms in recorded history.</string>
    <string name="fSkyscraper">Skyscraper</string>
    <string name="fSkyscraperDes">FBI Hostage Rescue Team pioneer and U.S. war veteran Will Sawyer presently surveys security for high rises. On task in Hong Kong he finds the tallest, most secure working on the planet all of a sudden burning, and he’s been encircled for it. A needed man on the run, Will must locate those capable, demonstrate his innocence and by one mea</string>
    <string name="fMammaMiaHereWeGoAgain">Mamma Mia Here We Go Again</string>
    <string name="fMammaMiaHereWeGoAgainDes">In this spin-off will mamma Mia!, Sophie looks into her mother’s secret word same time pregnant herself. Find Donna’s (Meryl Streep, lily James) adolescent life, encountering the fun she required with the three conceivable fathers for Sophie (Amanda Seyfriend).</string>
    <string name="fSahebBiwiAurGangster3">Saheb Biwi Aur Gangster 3</string>
    <string name="fSahebBiwiAurGangster3Des">Those illustrious adventure about deceit, conspiracy, greed What’s more desire proceeds in the third portion of the series, Similarly as those Saheb What’s more Biwi are hollowed against an adversary Furthermore Everybody included is plotting ruthlessly to their particular increase.</string>
    <string name="fKasal">Kasal</string>
    <string name="fKasalDes">In any case, things get entangled when Lia’s ex Wado dela Costa (Derek Ramsay) comes back to work for them in a venture that will enable Philip to win the decisions. Unavoidably, emotions reemerge and questions emerge. As we draw nearer to the big day, Lia ends up uncertain on the off chance that she is picking the correct man to wed, torn between the man from her past and the man she’s building a future with.</string>
    <string name="fPaltan">Paltan</string>
    <string name="fPaltanDes">The feature then imparts a sight the place warriors are crossing a mountain range for An offering with An re-made adaptation of ar Rehman’s Vande Mataram. J p Dutta may be over for as much most recent offering, Paltan which will be a expansion with as much war-based movies such as LOC and fringe. Composed and guided by Dutta himself, the movie producer can the thing that he will be best known to.</string>
    <string name="fTheDarkestMinds">The Darkest Minds</string>
    <string name="fTheDarkestMindsDes">Detained by a grown-up world that presently fears everybody under 18, a gathering of adolescents frame an obstruction gathering to battle back and recover control of their future.After a malady slaughtered  of kids and youngsters in the United States, the who figured out how to survive have created superpowers, yet have been secured internment camps in the wake of being proclaimed a danger. </string>
    <string name="fSlenderMan2018">Slender Man 2018</string>
    <string name="fSlenderMan2018Des">Those Ascent of the slim mamoncillo might have been a sad time. An urban legend that quickly spiralled crazy of control much appreciated will as much assumed capacity will prey once know youngsters Furthermore settle on them insane, the thin mamoncillo finished dependent upon being cited Concerning illustration the inspiring calculate in any amount for grisly, genuine occasions.</string>
    <string name="undo">Undo</string>
    <string name="E03AndroidCustomGridView">Custom Grid View</string>
    <string name="showName">Show Name</string>
    <string name="showDescription">Show Description</string>
    <string name="showImage">Show Image</string>
    <string name="show">Show:</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="image">Image</string>
    <string name="two">2</string>
    <string name="col">Col:</string>
    <string name="E04AndroidRecyclerView">Recycler View</string>
    <string name="mLeonName">Leon</string>
    <string name="mLeonSong">Baby Dont Talk</string>
    <string name="mLeonView">32000088</string>
    <string name="mLeonLike">43773</string>
    <string name="mLeonComment">1230</string>
    <string name="mLeonDate">02 Apr</string>
    <string name="mRitaOraName">Rita Ora</string>
    <string name="mRitaOraSong">Let You Love Me</string>
    <string name="mRitaOraView">366</string>
    <string name="mRitaOraLike">4</string>
    <string name="mRitaOraComment">34</string>
    <string name="mRitaOraDate">31 Oct</string>
    <string name="mRitaOra2Name">Rita Ora</string>
    <string name="mRitaOra2Song">Poison</string>
    <string name="mRitaOra2View">345</string>
    <string name="mRitaOra2Like">56</string>
    <string name="mRitaOra2Comment">6</string>
    <string name="mRitaOra2Date">04 May</string>
    <string name="mRihannaName">Rihanna</string>
    <string name="mRihannaSong">Just Feel It</string>
    <string name="mRihannaView">4887</string>
    <string name="mRihannaLike">745</string>
    <string name="mRihannaComment">3</string>
    <string name="mRihannaDate">09 Sep</string>
    <string name="mRihanna2Name">Rihanna</string>
    <string name="mRihanna2Song">American Oxygen</string>
    <string name="mRihanna2View">346</string>
    <string name="mRihanna2Like">35</string>
    <string name="mRihanna2Comment">5</string>
    <string name="mRihanna2Date">12 Sep</string>
    <string name="mRitaOra3Name">Rita Ora</string>
    <string name="mRitaOra3Song">Shine Ya Light</string>
    <string name="mRitaOra3View">346</string>
    <string name="mRitaOra3Like">0</string>
    <string name="mRitaOra3Comment">0</string>
    <string name="mRitaOra3Date">19 Dec</string>
    <string name="mMoName">Mo</string>
    <string name="mMoSong">Imaginary Friend</string>
    <string name="mMoView">678</string>
    <string name="mMoLike">34</string>
    <string name="mMoComment">21</string>
    <string name="mMoDate">03 Feb</string>
    <string name="mAllieXName">Allie X</string>
    <string name="mAllieXSong">Little Things</string>
    <string name="mAllieXView">645</string>
    <string name="mAllieXLike">5</string>
    <string name="mAllieXComment">0</string>
    <string name="mAllieXDate">04 Feb</string>
    <string name="mKeshaName">Kesha</string>
    <string name="mKeshaSong">Here Comes The Change</string>
    <string name="mKeshaView">243</string>
    <string name="mKeshaLike">0</string>
    <string name="mKeshaComment">0</string>
    <string name="mKeshaDate">08 Jul</string>
    <string name="mAvrilLavigneName">Avril Lavigne</string>
    <string name="mAvrilLavigneSong">Head Above Water</string>
    <string name="mAvrilLavigneView">456</string>
    <string name="mAvrilLavigneLike">344</string>
    <string name="mAvrilLavigneComment">1</string>
    <string name="mAvrilLavigneDate">30 Jun</string>
    <string name="mJojoName">Jojo</string>
    <string name="mJojoSong">Dont Give Out My Love</string>
    <string name="mJojoView">5765</string>
    <string name="mJojoLike">2</string>
    <string name="mJojoComment">0</string>
    <string name="mJojoDate">01 Feb</string>
    <string name="mLanaDelReyName">Lana Del Rey</string>
    <string name="mLanaDelReySong">Mariners Apartment Complex</string>
    <string name="mLanaDelReyView">8001</string>
    <string name="mLanaDelReyLike">7887</string>
    <string name="mLanaDelReyComment">568</string>
    <string name="mLanaDelReyDate">25 May</string>
    <string name="mCharliePuthName">Charlie Puth</string>
    <string name="mCharliePuthSong">Love Game</string>
    <string name="mCharliePuthView">532</string>
    <string name="mCharliePuthLike">235</string>
    <string name="mCharliePuthComment">234</string>
    <string name="mCharliePuthDate">17 Sep</string>
    <string name="mChrisBrownName">Chris Brown</string>
    <string name="mChrisBrownSong">Alone</string>
    <string name="mChrisBrownView">533</string>
    <string name="mChrisBrownLike">343</string>
    <string name="mChrisBrownComment">1</string>
    <string name="mChrisBrownDate">29 Jun</string>
    <string name="mInnaName">Inna</string>
    <string name="mInnaSong">Ra</string>
    <string name="mInnaView">987</string>
    <string name="mInnaLike">6</string>
    <string name="mInnaComment">456</string>
    <string name="mInnaDate">13 Jul</string>
    <string name="mCarlyRaeJepsenName">Carly Rae Jepsen</string>
    <string name="mCarlyRaeJepsenSong">Hey Boy</string>
    <string name="mCarlyRaeJepsenView">4664</string>
    <string name="mCarlyRaeJepsenLike">456</string>
    <string name="mCarlyRaeJepsenComment">84</string>
    <string name="mCarlyRaeJepsenDate">27</string>
    <string name="mChrisBrown2Name">Chris Brown</string>
    <string name="mChrisBrown2Song">All In</string>
    <string name="mChrisBrown2View">436</string>
    <string name="mChrisBrown2Like">67</string>
    <string name="mChrisBrown2Comment">87</string>
    <string name="mChrisBrown2Date">13 Jul</string>
    <string name="mPiaMiaName">Pia Mia</string>
    <string name="mPiaMiaSong">Bounce</string>
    <string name="mPiaMiaView">567</string>
    <string name="mPiaMiaLike">4</string>
    <string name="mPiaMiaComment">5</string>
    <string name="mPiaMiaDate">06 May</string>
    <string name="mRitaOra4Name">Rita Ora</string>
    <string name="mRitaOra4Song">Run It Back</string>
    <string name="mRitaOra4View">3453</string>
    <string name="mRitaOra4Like">445</string>
    <string name="mRitaOra4Comment">345</string>
    <string name="mRitaOra4Date">29 Des</string>
    <string name="mCharliXcxFtRitaOraName">Charli Xcx Ft. Rita Ora</string>
    <string name="mCharliXcxFtRitaOraSong">Doing It</string>
    <string name="mCharliXcxFtRitaOraView">94565</string>
    <string name="mCharliXcxFtRitaOraLike">24233</string>
    <string name="mCharliXcxFtRitaOraComment">3765</string>
    <string name="mCharliXcxFtRitaOraDate">3 Feb</string>
    <string name="sampleNum">123</string>
</resources>